RESOLVED FIXED101441
Indentation of ArgList.h is wrong
https://bugs.webkit.org/show_bug.cgi?id=101441
Summary Indentation of ArgList.h is wrong
Filip Pizlo
Reported 2012-11-07 01:59:25 PST
Patch forthcoming.
Attachments
the patch (7.76 KB, patch)
2012-11-07 02:07 PST, Filip Pizlo
kling: review+
Filip Pizlo
Comment 1 2012-11-07 02:07:57 PST
Created attachment 172742 [details] the patch
Andreas Kling
Comment 2 2012-11-07 04:30:03 PST
Comment on attachment 172742 [details] the patch Truly groundbreaking work! r=me
Alexey Proskuryakov
Comment 3 2012-11-07 08:37:50 PST
There is really no need to post these patches for review, an IRC rubber-stamp would work better.
Filip Pizlo
Comment 4 2012-11-07 12:53:02 PST
(In reply to comment #2) > (From update of attachment 172742 [details]) > Truly groundbreaking work! r=me Thanks brah!
Filip Pizlo
Comment 5 2012-11-07 13:16:31 PST
Note You need to log in before you can comment on or make changes to this bug.